testsuite/tests/typecheck/should_fail/tcfail051.hs
module ShouldFail where

instance B Bool where
 op1 a = a
