testsuite/tests/typecheck/should_fail/tcfail051.stderr

tcfail051.hs:3:10: error: [GHC-76037]
    Not in scope: type constructor or class ‘B’
